--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,4 +2,4 @@ FROM php:8.2-apache
 
 RUN apt update \
     && docker-php-ext-install mysqli \
-    && docker-php-ext-install pdo_mysql
+    && docker-php-ext-install pdo_mysql;
